Adicionar corpo do html

--- a/minicurso html.html
+++ b/minicurso html.html
@@ -5,7 +5,19 @@
             <meta charset="UTF-8">
             <meta http-equiv="X-UA-Compatible" content="IE=edge">
             <meta name="viewport" content="width=device-width, initial-scale=1.0">
-            <title> Conheça Ricky and Morty</title>
-
+            <title>Conheça Rick and Morty</title>
         </head>
+        <body>
+            <main>
+                <section>
+                    <img alt="Rick e Morty saindo de um túnel do tempo" src="https://static.wikia.nocookie.net/geekpediabr/images/a/a4/8641CD99-093F-4F85-9A26-388494EB3A7F.jpeg/revision/latest/top-crop/width/360/height/450?cb=20190722190346">
+                    <ul>
+                        <li>Nome: </li>
+                        <li>Espécie: </li>
+                        <li>Está vivo? </li>
+                    </ul>
+                    <button>Conheça um personagem de Rick and Morty</button>
+                </section>
+            </main>
+        </body>
     </html>
