--- a/minicurso html.html
+++ b/minicurso html.html
@@ -12,7 +12,7 @@
             <main>
                 <section>
                     <img alt="Rick e Morty saindo de um túnel do tempo" src="https://static.wikia.nocookie.net/geekpediabr/images/a/a4/8641CD99-093F-4F85-9A26-388494EB3A7F.jpeg/revision/latest/top-crop/width/360/height/450?cb=20190722190346">
-                    <ul>
+                    <ul id="detalhes-container">
                         <li>Nome: </li>
                         <li>Espécie: </li>
                         <li>Está vivo? </li>
