--- a/minicurso html.html
+++ b/minicurso html.html
@@ -18,7 +18,7 @@
                         <li>Espécie: <p id="especie"> </p> </li>
                         <li>Está vivo? <p id="status"> </p> </li>
                     </ul>
-                    <button>Conheça um personagem de Rick and Morty</button>
+                    <button>Conheça os personagens de Rick and Morty</button>
                 </section>
             </main>
         </body>
